--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="raj.mharo.mharorajasthan.welcome">
+    tools:context="raj.mharo.mharorajasthan.welcomeU">
 
 </android.support.constraint.ConstraintLayout>
