--- a/app/src/main/res/layout/activity_scan_number_plate2.xml
+++ b/app/src/main/res/layout/activity_scan_number_plate2.xml
@@ -53,6 +53,19 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.928" />
+        app:layout_constraintVertical_bias="0.935"
+        app:layout_constraintHorizontal_bias="0.103" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="232dp"
+        android:layout_height="99dp"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="150dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.979" />
 
 </android.support.constraint.ConstraintLayout>
