--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -5,37 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="raj.mharo.mharorajasthan.Payment">
-
-    <LinearLayout
-        android:layout_width="368dp"
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="2dp">
-        <RadioButton
-            android:id="@+id/radioButton"
-            android:layout_width="110dp"
-            android:layout_height="37dp"
-            android:text="By Wallet"
-            tools:layout_editor_absoluteX="147dp"
-            tools:layout_editor_absoluteY="141dp" />
+        android:text="By Card"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.46"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.185" />
 
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="368dp"
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="250dp">
+        android:text="By Wallet"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintVertical_bias="0.46"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.78" />
 
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Throught Card" />
-
-    </LinearLayout>
-
-
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="193dp"
+        android:layout_height="68dp"
+        android:text="Select Payment Method"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.451"
+        app:layout_constraintVertical_bias="0.201"
+        tools:layout_editor_absoluteX="41dp"
+        tools:layout_editor_absoluteY="98dp" />
 </android.support.constraint.ConstraintLayout>
