--- a/app/src/main/res/layout/activity_scan_number_plate2.xml
+++ b/app/src/main/res/layout/activity_scan_number_plate2.xml
@@ -44,9 +44,10 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="98dp"
+        android:layout_height="65dp"
         android:text="OK"
+        android:background="@android:color/holo_orange_light"
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -55,19 +56,26 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.935"
-        app:layout_constraintHorizontal_bias="0.103" />
+        app:layout_constraintVertical_bias="0.948"
+        app:layout_constraintHorizontal_bias="0.07" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="232dp"
-        android:layout_height="99dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="150dp"
+        android:layout_width="218dp"
+        android:layout_height="88dp"
+        android:textAlignment="center"
+        android:text="Scan the License plate of the respective vehicle and click on OK to verify whether the payment is done or not"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.979" />
+        app:layout_constraintVertical_bias="0.979"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        tools:layout_editor_absoluteY="407dp"
+        tools:layout_editor_absoluteX="158dp" />
 
 </android.support.constraint.ConstraintLayout>
